--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -32,6 +32,14 @@
         </header>
     </div>
 
+    <nav>
+        <ul>
+            {% for item in site.nav %}
+            <li><a href="{{ item.link }}">{{ item.name }}</a></li>
+            {% endfor %}
+        </ul>
+    </nav>
+
     <!-- MAIN CONTENT -->
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
