--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,9 +16,8 @@
     <!-- HEADER -->
     <div id="header_wrap" class="outer">
         <header class="inner">
-          {% if site.github.is_project_page %}
-            <a id="forkme_banner" href="{{ site.github.repository_url }}">View on GitHub</a>
-          {% endif %}
+          <a id="forkme_banner" href="https://github.com/jylu29/jylu29.github.io/tree/main">View on GitHub</a>
+          
 
           <h1 id="project_title">Jiayu Lu</h1>
           <h2 id="project_tagline">{{ site.description | default: site.github.project_tagline }}</h2>
@@ -31,14 +30,6 @@
           {% endif %}
         </header>
     </div>
-
-    <nav>
-        <ul>
-            {% for item in site.nav %}
-            <li><a href="{{ item.link }}">{{ item.name }}</a></li>
-            {% endfor %}
-        </ul>
-    </nav>
 
     <!-- MAIN CONTENT -->
     <div id="main_content_wrap" class="outer">
